travis ci deploy added

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,15 @@ after_success:
   - docker push iomc4u/docker-backend
   - docker push iomc4u/docker-nginx
 
+deploy:
+  provier: elasticbeanstalk
+  region: "ap-northeast-2"
+  app: "docker-fullstack-app"
+  env: "Dockerfullstackapp-env"
+  bucket_name: elasticbeanstalk-ap-northeast-2-681957632469
+  bucket_path: "docker-fullstack-app"
+  on:
+    branch: master  
+
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_ACCESS_KEY
